Changes in @NEW@:
  o Client Changes:
    * Erases of critical troves is no longer considered a reason to restart
      conary.
    * You can now delete troves, update from changesets, and update with a
      full version specified without an installLabelPath set. (CNY-281)
    * added rm as an alias for remove.

  o Bug Fixes:
    * Fixed a bug triggered when a critical update of a trove depended on 
      an erase.
    * A bug that caused changesets to be invalidated from the
      changeset cache when signatures were not modified by
      setTroveSigs() has been fixed.
    * A bug introduced 1.0.32 that affected the ability to update two troves
      due to the same broken dependency with resolveLevel 2 has been fixed.
      This bug affected the ability to simply run "conary update conary" when 
      conary-build and conary-repository will both installed. (CNY-949)
 

Changes in 1.0.33:
  o Client Changes:
    * The "cvc" and "conary" command line programs have new command
      line argument aliases.  They accept "-r" as an alias for
      "--root" and "-c" as an alias for "--config".  Commands that
      accept "--info" now accept "-i" as an alias.
    * Contexts can now override any configuration option. (CNY-812)
    * The meaning of the "--components" command line option has
      changed to be more intuitive.  For example, "conary q
      --components" will show all the components for all packages,
      indented as expected. (CNY-822)

  o Build (cvc) Changes:
    * "cvc commit -m'commit message'" is now accepted.  Previously, a
      space was required between the -m and the message.
    * Permissions are now preserved by tar when extracting a tar
      archive added with r.addArchive().
    * The Requires policy now parses pkg-config files more reliably.
    * "cvc cook" now has a "--download" option, which fetches the
      applicable sources from upstream or from the repository and then
      stops. (CNY-837)