@@ -6,6 +6,12 @@ Changes in @NEW@:
       full version specified without an installLabelPath set. (CNY-281)
     * added rm as an alias for remove.
 
+  o Build (cvc) Changes:
+    * When building a group, if you turn the last byDefault True component
+      to byDefault False, for a package, that will turn the package itself
+      byDefault False.  This avoids installing empty shells of packages
+      on the system. (CNY-774)
+
   o Bug Fixes:
     * Fixed a bug triggered when a critical update of a trove depended on 
       an erase.
